Don't specify dumbass rules without testing them (fixes modal off screen issue on desktop) #64

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -65,27 +65,3 @@
         }
     }
 }
-
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: $screen-sm-min) {
-    .fullscreen-modal,
-    .modal {
-        display: flex;
-        justify-content: center;
-
-        .container {
-            align-self: center;
-        }
-
-        .modal-dialog{
-            margin-top: 20%;
-        }
-
-        .close {
-            i {
-                font-size: 3em;
-            }
-        }
-    }
-}
